css and html changes

--- a/mainpage.html
+++ b/mainpage.html
@@ -12,7 +12,7 @@
                <ul>
                 <li> Welcome Jeffery(signout)</li>
                 <li> My Account</li>
-                <li><img class="lock" src="assets/icon_cart.png"> 999 Items - $9999.99 Checkout</li>
+                <li><img  src="assets/icon_cart.png"> 999 Items - $9999.99 <b>Checkout</b></li>
                 <li>Customer services</li>
                </ul>
                </div>
@@ -20,7 +20,7 @@
             <div class="navbar">
             <div class="subnavbar">
                     <ul>
-                        <li>Dining</li>
+                        <li id="dining">Dining</li>
                         <li>Crystal</li>
                         <li>By Brand</li>
                         <li>What's New</li>
@@ -30,7 +30,7 @@
                         <li>
                 <div class="search">
                     <div class="searchbar">
-                        <input type="text" placeholder="search">
+                        <input type="text" placeholder="Search Keyword/Item#">
                     </div>
                     <div class="button">
                         <button>Go</button>
