--- a/mainpage.html
+++ b/mainpage.html
@@ -83,14 +83,14 @@
              <div class="maincontent"> 
                 <h4>You'll love our fine stemware collection</h4> 
                 <p class="text">Duis autem vel eum iriure dolor in hendrerit vulputate.</p> 
-                <p class="link">See all stemware</p> 
+                <a href=""   class="link">See all stemware</a> 
             </div> 
         </div> 
         <div class="holidays"> 
             <div class="maincontent"> 
                 <h4>Home accent for the holidays</h4> 
                 <p class="text">Lorem ipsum dolor in amet, consectetuer adipiscing elit.</p> 
-                <p class="link">See all home accents</p> 
+                <a href=""   class="link">See all home accents</a> 
             </div> 
         </div> 
         <div class="clearence"> 
@@ -100,7 +100,7 @@
         </div> 
     </div>
     <div class="footer">
-        <div class="footer-content">
+        <div class="footerdata">
           <ul >
             <li ><a href="#">About Mikasa</a></li>
             <li ><a href="#">Customer Service</a></li>
@@ -115,7 +115,7 @@
               Sign up to receive special offers & promotions from Mikasa.
             </p>
             <div class="mail">
-              <input type="text" class="username" placeholder="Enter your email address" />
+              <input type="text" class="name" placeholder="Enter your email address" />
               <input type="submit" class="button" value="SIGN UP" />
             </div>
           </div>
