changes in html and css

--- a/mainpage.html
+++ b/mainpage.html
@@ -95,8 +95,8 @@
         </div> 
         <div class="clearence"> 
             <h4>Mikasa clearance <br> sale 20% to 80% off</h4> 
-            <p>Ut wisi enim ad minim veniam quis nostrud exerci tation.
-            <p class="wwww">See all clearance items</p> 
+            <p>Ut wisi enim ad minim veniam quis nostrud exerci tation.</p>
+            <a href="" class="wwww">See all clearance items</a> 
         </div> 
     </div>
     <div class="footer">
@@ -106,7 +106,7 @@
             <li ><a href="#">Customer Service</a></li>
             <li ><a href="#">Privacy Policy</a></li>
           </ul>
-          <p class="contact">For assistance, call us at 1.866.645.2721 (Mon - Fri 8:30am - 6:00pm est) or <a href="#">Email Us</a></p>
+          <p class="enquiry">For assistance, call us at 1.866.645.2721 (Mon - Fri 8:30am - 6:00pm est) or <a href="#">Email Us</a></p>
           
           <p class="copyrights">© Copyright 2008 Mikasa & Company</p>
         </div>
