minor changes in html

--- a/mainpage.html
+++ b/mainpage.html
@@ -12,7 +12,7 @@
                <ul>
                 <li> Welcome Jeffery(signout)</li>
                 <li> My Account</li>
-                <li><img  src="assets/icon_cart.png"> 999 Items - $9999.99 <b>Checkout</b></li>
+                <li><img class="icons" src="assets/icon_cart.png"> 999 Items - $9999.99 <b>Checkout</b></li>
                 <li>Customer services</li>
                </ul>
                </div>
